--- a/401-500.md
+++ b/401-500.md
@@ -800,3 +800,44 @@ private int backtrack(String s, int[] h) {
 ``` java
 Set<List<Integer>> ans = new HashSet<>();
 ```
+# 492. Construct the Rectangle
+从开根号的位置开始找，找第二个元素效率更高
+``` java
+int sqrt = (int) Math.sqrt(area);
+while (area % sqrt != 0) {
+    sqrt--;
+}
+return new int[]{area / sqrt, sqrt};
+```
+# 493. Reverse Pairs
+归并排序，翻转对是归并排序的副产物
+
+另有一种树状数组的思路
+# 494. Target Sum
+递归遍历每种可能，记录后面的值，如果出现不可能的情况，立即返回
+
+记忆化考虑`memo[i][s]`，表示到第`i`个数和为`s`的情况总数。记忆化一般需要有返回
+``` java
+if (i == nums.length()) return s == 0 ? 1 : 0;
+if (memo[i][s] > 0) return memo[i][s];
+memo[i][s] = dfs(nums, s - nums[i], i + 1, memo + dfs(nums, s + nums[i], i + 1, memo);
+return memo[i][s];
+```
+考虑转换为背包问题
+1. sum(N) - sum(P) = S
+2. 2*sum(N) - sum(P) + sum(P) = S + sum(N) + sum(P)
+3. 2*sum(N) = S + sum(nums)
+
+即有找到`N`个数之和能到一个容量
+``` java
+int target = (sum+S)/2;
+int[] dp = new int[target+1];
+dp[0] = 1;
+for(int i = 0; i < nums.length; i++){
+    for(int j = target; j >= nums[i]; j--){
+        dp[j] += dp[j-nums[i]];
+    }
+}
+
+return dp[target];
+```
