--- a/401-500.md
+++ b/401-500.md
@@ -841,3 +841,11 @@ for(int i = 0; i < nums.length; i++){
 
 return dp[target];
 ```
+# 495. Teemo Attacking
+从某个时间点开始，不断更新`end`值
+# 496. Next Greater Element I
+模拟单调栈的生成，记录到`map`中
+# 497. Random Point in Non-overlapping Rectangles
+按面积来随机，把所有的面积记录前缀和记录到`map`里，`random`一个值在`treemap`取上界
+
+注意因为坐标是整数，求面积需要各加`1`
