--- a/401-500.md
+++ b/401-500.md
@@ -849,3 +849,7 @@ return dp[target];
 按面积来随机，把所有的面积记录前缀和记录到`map`里，`random`一个值在`treemap`取上界
 
 注意因为坐标是整数，求面积需要各加`1`
+# 498. Diagonal Traverse
+找规律，考虑出去四边时如何转移
+# 500. Keyboard Row
+把一行的放入字符串，遍历每个单词每个字符看是否在同一行，注意区分大小写
