--- a/501-600.md
+++ b/501-600.md
@@ -3,3 +3,5 @@
 >这里是记录前一个节点，而不是父节点，用全局变量记录赋值
 # 502. IPO
 贪心的方法找到比`w`大的中最大收益的，直接用两个堆，将所有小于`w`的全放到另一个堆中，弹出一个最大收益
+# 503. Next Greater Element II
+单调栈，在弹出的时候赋值，遍历到`2*len`，栈只需维护前半部分
