--- a/501-600.md
+++ b/501-600.md
@@ -5,3 +5,17 @@
 贪心的方法找到比`w`大的中最大收益的，直接用两个堆，将所有小于`w`的全放到另一个堆中，弹出一个最大收益
 # 503. Next Greater Element II
 单调栈，在弹出的时候赋值，遍历到`2*len`，栈只需维护前半部分
+# 504. Base 7
+调用库函数
+
+也可以用短除法的思路，注意要考虑正负号
+``` java
+while(num != 0){
+    sb.append(num % 7);
+    num = num / 7;
+}
+```
+# 506. Relative Ranks
+把数据和编号放到堆中，依次弹出
+# 507. Perfect Number
+开平方遍历所有因子，加起来看是否相等
