--- a/501-600.md
+++ b/501-600.md
@@ -19,3 +19,8 @@ while(num != 0){
 把数据和编号放到堆中，依次弹出
 # 507. Perfect Number
 开平方遍历所有因子，加起来看是否相等
+# 508. Most Frequent Subtree Sum
+后序遍历将所有值的频率记录下来，最后返回最大值的元素
+# 509. Fibonacci Number
+用两个值递推即可
+
