--- a/501-600.md
+++ b/501-600.md
@@ -23,4 +23,8 @@ while(num != 0){
 后序遍历将所有值的频率记录下来，最后返回最大值的元素
 # 509. Fibonacci Number
 用两个值递推即可
+# 513. Find Bottom Left Tree Value
+层序遍历保留第一个值
 
+也可以`dfs`，在更新`depth`的时候更新结果
+ 
