--- a/501-600.md
+++ b/501-600.md
@@ -27,4 +27,9 @@ while(num != 0){
 层序遍历保留第一个值
 
 也可以`dfs`，在更新`depth`的时候更新结果
- 
+# 514. Freedom Trail
+记忆化的递归，考虑左边走和右边走的情况
+# 515. Find Largest Value in Each Tree Row
+层次遍历，记录最大值
+# 516. Longest Palindromic Subsequence
+记忆化的递归，考虑去掉左边一个、右边一个的情况，当两边想等时，考虑去掉两个的情况
