--- a/501-600.md
+++ b/501-600.md
@@ -33,3 +33,36 @@ while(num != 0){
 层次遍历，记录最大值
 # 516. Longest Palindromic Subsequence
 记忆化的递归，考虑去掉左边一个、右边一个的情况，当两边想等时，考虑去掉两个的情况
+# 517. Super Washing Machines
+考虑四个洗衣机，`[0, 0, 11, 5]`，最终为`[4, 4, 4, 4]`
+
+做差，得到`[-4, -4, 7, 1]`，负数表示还需要的衣服数，正数表示多余的衣服数。目的是将数组每一项变为`0`
+
+对于第一个洗衣机来说，需要四件衣服可以从第二个洗衣机获得，把`-4`移给二号洗衣机，变为`[0, -8, 7, 1]`
+
+此时二号洗衣机需要八件衣服，那么至少需要移动8次。那么差值数组变为`[0, 0, -1, 1]`
+
+此时三号洗衣机还缺1件，就从四号洗衣机处获得，此时差值数组成功变为了`[0, 0, 0, 0]`
+>移动是可以同时进行的，移动的最大次数就是差值数组中出现的绝对值最大的数字，`8`次
+# 518. Coin Change 2
+完全背包问题，对`coins`的循环在外面，选完了就不再选了
+# 519. Random Flip Matrix
+记录出现的点即可，出现的点可以转换成一维数组的方式，空间会小点
+
+另外可以考虑把用到的点跟最后的点交换，当再次随到该值就去拿交换的值，`random`调用最少
+``` java
+public int[] flip() {
+    int result = (int)(Math.random() * size--);
+
+    while (map.containsKey(result)) {
+        result = map.get(result);
+    }
+
+    map.put(result, size);
+
+    int x = result % n_rows;
+    int y = result / n_rows;
+
+    return new int[]{x, y};
+}
+```
