--- a/501-600.md
+++ b/501-600.md
@@ -66,3 +66,16 @@ public int[] flip() {
     return new int[]{x, y};
 }
 ```
+# 520. Detect Capital
+直接判断
+1. 全大写
+2. 全小写
+3. 仅首字母大写
+
+也可以统计大小写个数，再判断
+# 521. Longest Uncommon Subsequence I 
+返回最长的即可，想等返回`-1`
+# 522. Longest Uncommon Subsequence II
+按长度排序，从前往后，考虑所有大于等于该长度的元素是否有包含的，有就考虑下一个，没有即可返回
+> 长度肯定是某个串的长度（如果是其中的子串，那更长的肯定也可以）
+  
