--- a/501-600.md
+++ b/501-600.md
@@ -74,8 +74,42 @@ public int[] flip() {
 
 也可以统计大小写个数，再判断
 # 521. Longest Uncommon Subsequence I 
-返回最长的即可，想等返回`-1`
+返回最长的即可，相等返回`-1`
 # 522. Longest Uncommon Subsequence II
 按长度排序，从前往后，考虑所有大于等于该长度的元素是否有包含的，有就考虑下一个，没有即可返回
 > 长度肯定是某个串的长度（如果是其中的子串，那更长的肯定也可以）
-  
+# 523. Continuous Subarray Sum
+前缀和暴力求解，要注意`k=0`的情况
+
+更好的方法是用`map`记录当前的和与下标，对`(sum[j]−sum[i])%k`是否等于`0`等价于`sum[j]%k=sum[i]%k`
+``` java
+map.put(0, -1);
+for (int i = 0; i < nums.length; i++) {
+  sum += nums[i];
+  if (k != 0)
+      sum = sum % k;
+  if (map.containsKey(sum)) {
+      if (i - map.get(sum) > 1)
+          return true;
+  } else
+      map.put(sum, i);
+}
+
+```
+也可以用`set`，不过因为数组长度要大于`2`，在往`set`里加的时候要缓存一下
+``` java
+for (int i = 0; i < len; i++) {
+    sum[i+1] = sum[i] + nums[i];
+    int res = k == 0 ? sum[i+1] : sum[i+1] % k;
+    if (set.contains(res)) return true;
+    set.add(cache);
+    cache = res;
+}
+```
+# 524. Longest Word in Dictionary through Deleting
+排序后找到第一个满足条件的
+
+也可以不排序，遍历找比当前更好的
+# 525. Contiguous Array
+把`0`看成`-1`，原题即变为某个子数组加起来为和`0`
+>将前缀和记下来，考虑后面是否遇到相同的和
