--- a/501-600.md
+++ b/501-600.md
@@ -113,3 +113,14 @@ for (int i = 0; i < len; i++) {
 # 525. Contiguous Array
 把`0`看成`-1`，原题即变为某个子数组加起来为和`0`
 >将前缀和记下来，考虑后面是否遇到相同的和
+# 526. Beautiful Arrangement
+递归，考虑每个位置能放置的点
+# 528. Random Pick with Weight
+记录前缀和的位置，`treemap`来存，考虑`random`出来的在哪一个下标
+
+也可以构造前缀和数组，二分查找
+# 529. Minesweeper
+递归求解
+1. 点击地雷--显示`X`，返回；
+2. 点空方块--若周围有地雷，显示数字`n`，返回；
+3. 点空方块--若周围没有地雷，显示空白`B`，并递归显示相连的方块；
