--- a/501-600.md
+++ b/501-600.md
@@ -121,6 +121,14 @@ for (int i = 0; i < len; i++) {
 也可以构造前缀和数组，二分查找
 # 529. Minesweeper
 递归求解
-1. 点击地雷--显示`X`，返回；
-2. 点空方块--若周围有地雷，显示数字`n`，返回；
-3. 点空方块--若周围没有地雷，显示空白`B`，并递归显示相连的方块；
+1. 点击地雷--显示`X`，返回
+2. 点空方块--若周围有地雷，显示数字`n`，返回
+3. 点空方块--若周围没有地雷，显示空白`B`，并递归显示相连的方块
+# 530. Minimum Absolute Difference in BST
+中序遍历记录前一个节点
+# 532. K-diff Pairs in an Array
+用另外一个`set`记录已经出现的最小值，避免重复，可以不排序，考虑不同的大小关系
+535. Encode and Decode TinyURL
+直接用数字编号，`map`记录，然后返回
+
+可以产生某个随机值，用`map`记录，产生时如果出现了该随机值，再`random`一遍
