--- a/501-600.md
+++ b/501-600.md
@@ -132,3 +132,5 @@ for (int i = 0; i < len; i++) {
 直接用数字编号，`map`记录，然后返回
 
 可以产生某个随机值，用`map`记录，产生时如果出现了该随机值，再`random`一遍
+# 537. Complex Number Multiplication
+按`+`和`i`切分，直接计算
