--- a/501-600.md
+++ b/501-600.md
@@ -134,3 +134,9 @@ for (int i = 0; i < len; i++) {
 可以产生某个随机值，用`map`记录，产生时如果出现了该随机值，再`random`一遍
 # 537. Complex Number Multiplication
 按`+`和`i`切分，直接计算
+# 538. Convert BST to Greater Tree
+反中序遍历，记录之前的和即可
+# 539. Minimum Time Difference
+排序后计算差值
+
+也可以转换成分钟数计算
