--- a/501-600.md
+++ b/501-600.md
@@ -140,3 +140,20 @@ for (int i = 0; i < len; i++) {
 排序后计算差值
 
 也可以转换成分钟数计算
+# 540. Single Element in a Sorted Array
+根据`mid`所处位置奇偶，和后一个元素是否相等，判断处于前半部分还是后半分二分求解
+# 541. Reverse String II
+每k个逆转即可
+
+另外考虑直接按下标翻转
+``` java
+for (int start = 0; start < a.length; start += 2 * k) {
+    int i = start, j = Math.min(start + k - 1, a.length - 1);
+    while (i < j) {
+        char tmp = a[i];
+        a[i++] = a[j];
+        a[j--] = tmp;
+    }
+}
+return new String(a);
+```
