--- a/501-600.md
+++ b/501-600.md
@@ -157,3 +157,29 @@ for (int start = 0; start < a.length; start += 2 * k) {
 }
 return new String(a);
 ```
+# 542. 01 Matrix
+`bfs`，将`0`全部加入队列，一圈一圈遍历
+
+也可以动态规划，考虑斜上和斜下
+``` java
+for (int i = 0; i < rows; i++) {
+    for (int j = 0; j < cols; j++) {
+        if (matrix[i][j] == 0)
+            dist[i][j] = 0;
+        else {
+            if (i > 0)
+                dist[i][j] = min(dist[i][j], dist[i - 1][j] + 1);
+            if (j > 0)
+                dist[i][j] = min(dist[i][j], dist[i][j - 1] + 1);
+        }
+    }
+}
+for (int i = rows - 1; i >= 0; i--) {
+    for (int j = cols - 1; j >= 0; j--) {
+        if (i < rows - 1)
+            dist[i][j] = min(dist[i][j], dist[i + 1][j] + 1);
+        if (j < cols - 1)
+            dist[i][j] = min(dist[i][j], dist[i][j + 1] + 1);
+    }
+}
+```
