--- a/501-600.md
+++ b/501-600.md
@@ -183,3 +183,5 @@ for (int i = rows - 1; i >= 0; i--) {
     }
 }
 ```
+# 543. Diameter of Binary Tree
+直径其实是每个节点的左右子树的高度和的最大值，因此记录遍历过程中最大值，返回左右子树的最大高度
