--- a/501-600.md
+++ b/501-600.md
@@ -185,3 +185,15 @@ for (int i = rows - 1; i >= 0; i--) {
 ```
 # 543. Diameter of Binary Tree
 直径其实是每个节点的左右子树的高度和的最大值，因此记录遍历过程中最大值，返回左右子树的最大高度
+# 546. Remove Boxes
+暴力的方法考虑所有情况超时，加入记忆化仍然超时
+
+考虑更好的遍历方法，对`ABACDA`，考虑去掉`CD`后的`ABAA`，去掉`B`后的`AAA`
+>准备三维`dp`，`dp[l][r]][k]`表示`l`到`r`，后面有`k`个元素跟`r`位置元素一样
+``` java
+dp[l][r][k] = dp[l][r−1][0]+(k+1)∗(k+1) // 去掉 r到最后的k+1个
+dp[l][r][k] = max(dp[l][r][k], dp[l][i][k+1] + dp[i+1][r-1][0]) // 去掉中间一段，如ABACDA->ABAA
+```
+# 547. Friend Circles
+并查集和搜索都可以解决，并查集在合并的时候可以直接对答案减`1`，然后返回
+
