--- a/501-600.md
+++ b/501-600.md
@@ -214,3 +214,21 @@ for (int i = 2; i < nums.length; i++) {
 }
 res.append(")");
 ```
+# 554. Brick Wall
+记录每一行每个空位出现的次数，找出出现最多的那个
+# 556. Next Greater Element III
+全排列问题，转化的时候可能超过`int`，因此使用异常返回`-1`，或者用`long`转化后看是否越界
+1. 从后往前找第一个升序的位置（因为逆序肯定不会有更大的了）
+2. 从此位置向后找刚好大于的元素，交互
+3. 后面的元素仍然降序，将其逆转
+# 557. Reverse Words in a String III
+用`Collections.reverse`对数组进行翻转，`String.join`进行构建
+
+也可以转化成`StringBuilder`进行翻转
+``` java
+String words[] = s.split(" ");
+StringBuilder res=new StringBuilder();
+for (String word: words)
+   res.append(new StringBuffer(word).reverse().toString() + " ");
+return res.toString().trim();
+```
