--- a/501-600.md
+++ b/501-600.md
@@ -232,3 +232,14 @@ for (String word: words)
    res.append(new StringBuffer(word).reverse().toString() + " ");
 return res.toString().trim();
 ```
+# 558. Quad Tree Intersection
+如果两个节点有一个是叶子节点，且该叶子节点值为`true`，返回这个叶子节点，`false`返回另一个
+
+两个节点都不是叶子节点则继续递归
+>得到返回值以后，`4`个子节点若都是`true`，要合并四个子节点(不会出现`4`个都是`false`的情况，因为是或运算，有`true`就返回`true`）
+# 559. Maximum Depth of N-ary Tree
+递归考虑每个子节点的高度
+
+也可以用`bfs`求解
+# 560. Subarray Sum Equals K
+连续和为`k`的问题，记录前缀和出现的次数，考虑当前`sum-k`存在了多少次
