--- a/501-600.md
+++ b/501-600.md
@@ -243,3 +243,24 @@ return res.toString().trim();
 也可以用`bfs`求解
 # 560. Subarray Sum Equals K
 连续和为`k`的问题，记录前缀和出现的次数，考虑当前`sum-k`存在了多少次
+# 561. Array Partition I
+排序后每两个选最小的
+# 563. Binary Tree Tilt
+遍历记录`sum`即可，注意返回值
+``` java
+private int helper(TreeNode root) {
+    if (root == null) {
+        return 0;
+    }
+    int l = helper(root.left);
+    int r = helper(root.right);
+    result += Math.abs(l - r);
+    return l + r + root.val;
+}
+```
+564. Find the Closest Palindrome
+考虑四种情况，长度分别为`n-1`，`n+1`，`n`
+* `n-1`: 一定是`9...9`
+* `n+1`: 一定是`10...01`
+* `n`: 考虑大于和小于的情况，用`n`个`9`去靠近，直到刚好大于；用`n`个`0`去靠近，直到刚好小于
+>构造的思路去检测
