--- a/501-600.md
+++ b/501-600.md
@@ -264,3 +264,30 @@ private int helper(TreeNode root) {
 * `n+1`: 一定是`10...01`
 * `n`: 考虑大于和小于的情况，用`n`个`9`去靠近，直到刚好大于；用`n`个`0`去靠近，直到刚好小于
 >构造的思路去检测
+# 565. Array Nesting
+注意到每组数据只能被访问一次，用个`vis`记录某一次是否被访问
+> 如果不想用多余空间，考虑把`nums`某个值改为`-1`这种
+# 566. Reshape the Matrix
+遍历重新放到新数组
+567. Permutation in String
+每段是否包含相同的字符数，考虑滑动窗口对每段进行比较
+
+比较可以优化，记录有多少个已经相等，当总数达到26的时候即为真
+``` java
+for (int i = 0; i < s2.length() - s1.length(); i++) {
+    int r = s2.charAt(i + s1.length()) - 'a', l = s2.charAt(i) - 'a';
+    if (count == 26)
+        return true;
+    s2map[r]++;
+    if (s2map[r] == s1map[r])
+        count++;
+    else if (s2map[r] == s1map[r] + 1)
+        count--;
+    s2map[l]--;
+    if (s2map[l] == s1map[l])
+        count++;
+    else if (s2map[l] == s1map[l] - 1)
+        count--;
+}
+return count == 26;
+```
