--- a/501-600.md
+++ b/501-600.md
@@ -272,7 +272,7 @@ private int helper(TreeNode root) {
 567. Permutation in String
 每段是否包含相同的字符数，考虑滑动窗口对每段进行比较
 
-比较可以优化，记录有多少个已经相等，当总数达到26的时候即为真
+比较可以优化，记录有多少个已经相等，当总数达到`26`的时候即为真
 ``` java
 for (int i = 0; i < s2.length() - s1.length(); i++) {
     int r = s2.charAt(i + s1.length()) - 'a', l = s2.charAt(i) - 'a';
