--- a/501-600.md
+++ b/501-600.md
@@ -291,3 +291,25 @@ for (int i = 0; i < s2.length() - s1.length(); i++) {
 }
 return count == 26;
 ```
+# 572. Subtree of Another Tree
+两部分递归，一个判断是否是相同的树，主函数判断所有情况
+* 要么这两个树相等
+* 要么这个树是左树的子树
+* 要么这个树是右树的子树
+
+另外如果要在一个递归中解决，记录原始`t`，在每次不一样的时候都用原始`t`去比较
+``` java
+TreeNode it;
+public boolean isSubtree(TreeNode s, TreeNode t) {
+    it = t;
+    return sub(s, t);
+}
+
+private boolean sub(TreeNode s, TreeNode t) {
+    if (s == null && t == null) return true;
+    if (s == null || t == null) return false;
+    return s.val != t.val ? sub(s.left, it) || sub(s.right, it) : (sub(s.left, t.left) && sub(s.right, t.right)) || sub(s.left, t) || sub(s.right, t);
+}
+```
+
+也可以序列化后看是否在里面也可以解
