--- a/501-600.md
+++ b/501-600.md
@@ -315,3 +315,7 @@ private boolean sub(TreeNode s, TreeNode t) {
 也可以序列化后看是否在里面也可以解
 # 575. Distribute Candies
 去重后的个数，先去满足
+# 576. Out of Boundary Paths
+用`bfs`，记录边界出现的次数，超时了
+
+考虑记忆化的递归
