--- a/501-600.md
+++ b/501-600.md
@@ -319,3 +319,45 @@ private boolean sub(TreeNode s, TreeNode t) {
 用`bfs`，记录边界出现的次数，超时了
 
 考虑记忆化的递归
+# 581. Shortest Unsorted Continuous Subarray
+复制一个，排序后看左边和右边不同的位置，则中间都是要排序的元素
+
+考虑`O(n)`的方法
+* 从左到右，记录到当前的最大值，若当前值小于最大值，说明应该换到最大值前面，记录最后的下标
+* 反过来，记录最小值，若当前值大于最小值，说明应该换到后面，记录最后的下标
+> 这个过程也可以单调栈处理
+``` java
+int max = Integer.MIN_VALUE;
+int min = Integer.MAX_VALUE;
+int r = 0;
+int l = 0;
+for (int i = 0; i < arr.length; i++) {
+    if(max > arr[i]) {
+        r = i;
+    }
+    max = Math.max(max, arr[i]);
+}
+for (int i = arr.length - 1; i >= 0; i--) {
+    if(min < arr[i]) {
+        l = i;
+    }
+    min = Math.min(min, arr[i]);
+}
+return r == l ? 0 : r - l + 1;
+```
+# 583. Delete Operation for Two Strings
+记忆话递归，当相同的时候，直接考虑两边的下一个
+
+改成`dp`
+``` java
+for (int i = 0; i <= s1.length(); i++) {
+    for (int j = 0; j <= s2.length(); j++) {
+        if (i == 0 || j == 0)
+            dp[i][j] = i + j;
+        else if (s1.charAt(i - 1) == s2.charAt(j - 1))
+            dp[i][j] = dp[i - 1][j - 1];
+        else
+            dp[i][j] = 1 + Math.min(dp[i - 1][j], dp[i][j - 1]);
+    }
+}
+```
