--- a/501-600.md
+++ b/501-600.md
@@ -361,3 +361,33 @@ for (int i = 0; i <= s1.length(); i++) {
     }
 }
 ```
+# 587. Erect the Fence
+凸包问题，注意判断某个点在某条线的方向
+# 589. N-ary Tree Preorder Traversal
+递归比较简单，考虑迭代
+``` java
+LinkedList<Node> stack = new LinkedList<>();
+stack.add(root);
+while (!stack.isEmpty()) {
+    Node node = stack.pollLast();
+    output.add(node.val);
+    Collections.reverse(node.children);
+    for (Node item : node.children) {
+        stack.add(item);
+    }
+}
+```
+# 590. N-ary Tree Postorder Traversal
+递归比较简单，考虑迭代
+``` java
+stack.add(root);
+while (!stack.isEmpty()) {
+    Node node = stack.pollLast();
+    output.addFirst(node.val);
+    for (Node item : node.children) {
+        if (item != null) {
+            stack.add(item);    
+        } 
+    }
+}
+```
