--- a/501-600.md
+++ b/501-600.md
@@ -393,3 +393,9 @@ while (!stack.isEmpty()) {
 ```
 # 591. Tag Validator
 利用栈处理`tag`，考虑遇到`<`的情况
+# 592. Fraction Addition and Subtraction
+通分就和，按`+`分割，在`-`前面补`+`
+# 593. Valid Square
+排序后，边长为`p0p1`、`p1p3`、`p3p2`、`p2p0`，对角线为`p0p3`、`p1p2`，分别判断这几条边的长度是否相等
+# 594. Longest Harmonious Subsequence
+记录每个数字出现的次数，找加`1`的数的个数
