--- a/501-600.md
+++ b/501-600.md
@@ -399,3 +399,21 @@ while (!stack.isEmpty()) {
 排序后，边长为`p0p1`、`p1p3`、`p3p2`、`p2p0`，对角线为`p0p3`、`p1p2`，分别判断这几条边的长度是否相等
 # 594. Longest Harmonious Subsequence
 记录每个数字出现的次数，找加`1`的数的个数
+# 595. Big Countries
+``` sql
+SELECT name, population, area 
+FROM WORLD
+WHERE area > 3000000 OR population > 25000000;
+```
+# 596. Classes More Than 5 Students
+``` sql
+select class 
+from courses 
+group by class 
+having count(distinct student)>=5 ;
+```
+# 598. Range Addition II
+重叠面积，找最小的`x`，`y`
+# 599. Minimum Index Sum of Two Lists
+用`map`记录值和下标，遍历另一个看是否存在，并更新下标和
+# 600. Non-negative Integers without Consecutive Ones
