--- a/501-600.md
+++ b/501-600.md
@@ -417,3 +417,13 @@ having count(distinct student)>=5 ;
 # 599. Minimum Index Sum of Two Lists
 用`map`记录值和下标，遍历另一个看是否存在，并更新下标和
 # 600. Non-negative Integers without Consecutive Ones
+首先求长度为`n`的串不含连续`1`的个数，可以采用记忆化的递归
+> 其实是斐波那契数列，长度为`n`时，可以从`n-1`加`0`得来，如果`n`位要为`1`，则前面为`0`，因此可以从`n-2`加`01`得来
+``` java
+dp[n] = dp[n - 2] + dp[n - 1]
+```
+考虑不大于`num`的情况
+比如`num`为`11010`，让每个`1`为`0`
+* 让第一位为`0`，求`0 0000`到`0 1111`的个数，长度为`4`的`helper`
+* 让第二位为`0`，求`10 000`到`10 111`的个数，长度为`3`的`helper`
+* 让第四位为`0`，求`1100 0`到`1100 1`的个数，由于存在`11`了，因此不用求了，直接返回之前的值
