--- a/601-700.md
+++ b/601-700.md
@@ -9,3 +9,49 @@ where ((a.id = b.id-1 and b.id+1 = c.id) or
   and (a.people>=100 and b.people>=100 and c.people>=100)
 order by a.id;
 ```
+# 605. Can Place Flowers
+每`3`个可以放一个，注意开头和结尾的情况，考虑在开头末尾加`0`，因此初始化时`count=1`，结尾`count/2`
+# 606. Construct String from Binary Tree
+考虑右边为空的时候，可以省略括号，左边为空时不能省略
+``` java
+public String tree2str(TreeNode t) {
+    if(t==null)
+        return "";
+    if(t.left==null && t.right==null)
+        return t.val+"";
+    if(t.right==null)
+        return t.val+"("+tree2str(t.left)+")";
+    return t.val+"("+tree2str(t.left)+")("+tree2str(t.right)+")";   
+}
+```
+# 609. Find Duplicate File in System
+用`map`存储内容对应的路径，如果存在两个以上则返回答案
+# 611. Valid Triangle Number
+排序后三重循环判断a+b>c，O(N^3)
+
+由于排序，查找c的时候用二分可以降到O(N^2logN)
+
+利用双指针降到O(N^2)，从后往前固定最大值，考虑左边界和右边界
+``` java
+for (int i = n - 1; i >= 2; --i) {
+    int l = 0, r = i - 1;
+    while (l < r) {
+        if (nums[l] + nums[r] > nums[i]) {
+            res += r - l;
+            --r;
+        } else {
+            ++l;
+        }
+    }
+}
+```
+# 617. Merge Two Binary Trees
+递归左右两边即可
+# 620. Not Boring Movies
+`mod`求奇偶
+``` sql
+select *
+from cinema
+where mod(id, 2) = 1 and description != 'boring'
+order by rating DESC ;
+```
