--- a/601-700.md
+++ b/601-700.md
@@ -55,3 +55,43 @@ from cinema
 where mod(id, 2) = 1 and description != 'boring'
 order by rating DESC ;
 ```
+# 621. Task Scheduler
+最小的次数为`(max-1)*(n+1)+1`
+> A->X->X->A->X->X->A
+
+若某个任务跟`A`一样多，则次数需要加`1`
+> A->B->X->A->B->X->A->B
+
+若空位置插满后还有，就可以随便继续插入
+``` java
+Arrays.sort(counts);
+int maxCount = counts[25];
+int retCount = (maxCount - 1) * (n + 1) + 1;
+int i = 24;
+while (i >= 0 && counts[i] == maxCount) {
+    retCount++;
+    i--;
+}
+return Math.max(retCount, tasks.length);
+```
+# 622. Design Circular Queue
+利用数组求余
+# 623. Add One Row to Tree
+广度优先遍历到层数添加即可，也可以深度递归插入
+``` java
+public void insert(int val, TreeNode node, int depth, int n) {
+    if (node == null)
+        return;
+    if (depth == n - 1) {
+        TreeNode t = node.left;
+        node.left = new TreeNode(val);
+        node.left.left = t;
+        t = node.right;
+        node.right = new TreeNode(val);
+        node.right.right = t;
+    } else {
+        insert(val, node.left, depth + 1, n);
+        insert(val, node.right, depth + 1, n);
+    }
+}
+```
