--- a/601-700.md
+++ b/601-700.md
@@ -95,3 +95,63 @@ public void insert(int val, TreeNode node, int depth, int n) {
     }
 }
 ```
+# 626. Exchange Seats
+改变`id`后排序
+``` sql
+SELECT (CASE 
+            WHEN MOD(id,2) = 1 AND id = (SELECT COUNT(*) FROM seat) THEN id
+            WHEN MOD(id,2) = 1 THEN id+1
+            ElSE id-1
+        END) AS id, student
+FROM seat
+ORDER BY id;
+```
+# 627. Swap Salary
+`if`表达式
+``` sql
+UPDATE
+salary 
+SET sex = IF(sex = 'm','f','m')
+```
+# 628. Maximum Product of Three Numbers
+排序后要么是最后三个，要么是前两个（负数）和最后一个
+> 也可以一次遍历记录这几个值
+``` java
+int min1 = Integer.MAX_VALUE, min2 = Integer.MAX_VALUE;
+int max1 = Integer.MIN_VALUE, max2 = Integer.MIN_VALUE, max3 = Integer.MIN_VALUE;
+for (int n: nums) {
+    if (n <= min1) {
+        min2 = min1;
+        min1 = n;
+    } else if (n <= min2) {
+        min2 = n;
+    }
+    if (n >= max1) {
+        max3 = max2;
+        max2 = max1;
+        max1 = n;
+    } else if (n >= max2) {
+        max3 = max2;
+        max2 = n;
+    } else if (n >= max3) {
+        max3 = n;
+    }
+}
+return Math.max(min1 * min2 * max1, max1 * max2 * max3);
+```
+# 629. K Inverse Pairs Array
+动态规划，`dp[i][j]`表示`i`个数`j`个逆序对的排列数，此时考虑`i`的不同位置
+* 放最后逆序对不变`dp[i-1][j]`
+* 放倒数第二个，多一个逆序对，由`dp[i-1][j-1]`转移过来
+继续整个过程，有
+``` java
+dp[i][j]=dp[i-1][j]+dp[i-1][j-1]+...+dp[i-1][j-i+1]
+```
+复杂度`O(N^2*K)`，观察递推式
+``` java
+dp[i][j]=dp[i-1][j]+dp[i-1][j-1]+...+dp[i-1][j-i+1]
+dp[i][j-1]=dp[i-1][j-1]+dp[i-1][j-2]+...+dp[i-1][j-i]
+dp[i][j]-dp[i][j-1]=dp[i-1][j]-dp[i-1][j-i]
+dp[i][j]=dp[i][j-1]+dp[i-1][j]-dp[i-1][j-i]
+```
+用`dp[i][j-1]`代替了部分和，有点像前缀和
