--- a/601-700.md
+++ b/601-700.md
@@ -155,3 +155,40 @@ dp[i][j]-dp[i][j-1]=dp[i-1][j]-dp[i-1][j-i]
 dp[i][j]=dp[i][j-1]+dp[i-1][j]-dp[i-1][j-i]
 ```
 用`dp[i][j-1]`代替了部分和，有点像前缀和
+# 630. Course Schedule III
+贪心的思路，按结束时间排序，记录要上课程的长度，对当前课程，如果不能上了，则考虑去掉最耗时的一门
+>比如`[5,5]`,`[4,6]`两门课，上了`[5,5]`后，再上`[4,6]`肯定不行，既然两个只能选一个，肯定选最短的那个`[4,6]`
+# 632. Smallest Range Covering Elements from K Lists
+将所有元素放入`treeset`中，对每个元素，考虑其为左端点的时候，有端点的位置，剪枝是当`r-l>res`时`break`
+
+考虑展平，排序并记录每个元素属于哪一行，找某个区间框住所有的行，可以采用双指针
+``` java
+List<int[]> list = new ArrayList<>();
+for (int i = 0; i < m; ++i) {
+    List<Integer> num = nums.get(i);
+    for (int n : num) {
+        list.add(new int[] {n, i});
+    }
+}
+Collections.sort(list, (num1, num2) -> (num1[0] - num2[0]));
+int n = list.size(), lo = 0, interval = Integer.MAX_VALUE, diff = 0;
+int[] which = new int[m];
+int[] ans = new int[2];
+for (int hi = 0; hi < n; ++hi) {
+    diff += which[list.get(hi)[1]]++ == 0 ? 1 : 0;
+    while (diff == m && lo <= hi) {
+        int i = list.get(lo)[0], j = list.get(hi)[0];
+        if (j - i < interval) {
+            interval = j - i;
+            ans = new int[] {i, j};
+        }
+        if (--which[list.get(lo)[1]] == 0) {
+            --diff;
+        }
+        ++lo;
+    }
+}
+return ans;
+```
+
+考虑`K`路指针的方案，将每个数组的头放入`treeset`中，找出最大值和最小值去更新结果，然后去掉最小值，用该行的下一个元素去替换，直到到达某个数组的末尾
