--- a/601-700.md
+++ b/601-700.md
@@ -159,7 +159,7 @@ dp[i][j]=dp[i][j-1]+dp[i-1][j]-dp[i-1][j-i]
 贪心的思路，按结束时间排序，记录要上课程的长度，对当前课程，如果不能上了，则考虑去掉最耗时的一门
 >比如`[5,5]`,`[4,6]`两门课，上了`[5,5]`后，再上`[4,6]`肯定不行，既然两个只能选一个，肯定选最短的那个`[4,6]`
 # 632. Smallest Range Covering Elements from K Lists
-将所有元素放入`treeset`中，对每个元素，考虑其为左端点的时候，有端点的位置，剪枝是当`r-l>res`时`break`
+将所有元素放入`treeset`中，对每个元素，考虑其为左端点的时候，右端点的位置，剪枝是当`r-l>res`时`break`
 
 考虑展平，排序并记录每个元素属于哪一行，找某个区间框住所有的行，可以采用双指针
 ``` java
@@ -190,5 +190,42 @@ for (int hi = 0; hi < n; ++hi) {
 }
 return ans;
 ```
-
 考虑`K`路指针的方案，将每个数组的头放入`treeset`中，找出最大值和最小值去更新结果，然后去掉最小值，用该行的下一个元素去替换，直到到达某个数组的末尾
+# 633. Sum of Square Numbers
+遍历`a`到，看是否刚好有`b`，注意`a*a`可能溢出，用`long`
+
+也可以用双指针
+``` java
+int i = 0, j = (int) Math.sqrt(target);
+while (i <= j) {
+    int powSum = i * i + j * j;
+    if (powSum == target) {
+        return true;
+    } else if (powSum > target) {
+        j--;
+    } else {
+        i++;
+    }
+}
+```
+费马平方和定理
+>一个非负整数`c`能够表示为两个整数的平方和，当且仅当`c`的所有形如`4k+3`的质因子的幂次均为偶数
+# 636. Exclusive Time of Functions
+用栈模拟，把中间的时间放进去，在遇到`end`的时候先`pop`中间耗时
+
+考虑方进入`id`和开始时间，每次`pop`的时候，如果栈顶不为空，将栈顶减去当前耗时
+``` java
+Deque<int[]> st = new ArrayDeque<>();
+for(String log : logs) {
+    String[] stamp = log.split(":");
+    if(stamp[1].equals("start"))
+        st.push(new int[]{Integer.parseInt(stamp[0]), Integer.parseInt(stamp[2])});
+    else {
+        int[] fun = st.poll();
+        int exectime = Integer.parseInt(stamp[2]) - fun[1] + 1;
+        ret[fun[0]] += exectime;
+        if(!st.isEmpty())
+            ret[st.peek()[0]] -= exectime;
+    }
+}
+```
