--- a/601-700.md
+++ b/601-700.md
@@ -229,3 +229,8 @@ for(String log : logs) {
     }
 }
 ```
+# 637. Average of Levels in Binary Tree
+层次遍历，记录`sum`和`size`
+# 638. Shopping Offers
+记忆化递归，考虑取不同方案的最好情况
+> 注意`res`的初始化可以为`dot`值，将`price`当成特殊的大礼包放入`special`会超时
