--- a/601-700.md
+++ b/601-700.md
@@ -234,3 +234,8 @@ for(String log : logs) {
 # 638. Shopping Offers
 记忆化递归，考虑取不同方案的最好情况
 > 注意`res`的初始化可以为`dot`值，将`price`当成特殊的大礼包放入`special`会超时
+# 639. Decode Ways II
+考虑前一个不同的情况进行递推即可
+# 640. Solve the Equation
+分别计算两边`x`的系数和数字，只有`+-`，可以在负号前添加正号，按正号划分
+> 注意`x`和`-x`
