--- a/601-700.md
+++ b/601-700.md
@@ -239,3 +239,5 @@ for(String log : logs) {
 # 640. Solve the Equation
 分别计算两边`x`的系数和数字，只有`+-`，可以在负号前添加正号，按正号划分
 > 注意`x`和`-x`
+# 641. Design Circular Deque
+使用`(下标 + 容量 +/- 1) % 容量`取于的方式实现下标循环
