--- a/601-700.md
+++ b/601-700.md
@@ -241,3 +241,57 @@ for(String log : logs) {
 > 注意`x`和`-x`
 # 641. Design Circular Deque
 使用`(下标 + 容量 +/- 1) % 容量`取于的方式实现下标循环
+# 643. Maximum Average Subarray I
+移动窗口
+# 645. Set Mismatch
+另开数组记录每个位置出现的次数
+
+或者交换的思路
+``` java
+for (int i = 0; i < nums.length; i++) {
+    while (nums[i] != i + 1 && nums[nums[i] - 1] != nums[i]) {
+        swap(nums, i, nums[i] - 1);
+    }
+}
+for (int i = 0; i < nums.length; i++) {
+    if (nums[i] != i + 1) {
+        return new int[]{nums[i], i + 1};
+    }
+}
+```
+# 646. Maximum Length of Pair Chain
+排序后，`dp`看前面的项是否与当前项可以递推
+
+另外贪心
+``` java
+Arrays.sort(pairs,(a,b)-> a[1]-b[1]);
+int res = 1,tmp = pairs[0][1];
+for(int i = 1;i < pairs.length;i++){
+    if(pairs[i][0] > tmp){
+         res++;
+         tmp = pairs[i][1];
+    }
+}
+return res;
+```
+# 647. Palindromic Substrings
+记录`dp[i][j]`表示是否两个位置间是是否回文，用不同的长度去计算
+
+也可以用中心去扩散
+``` java
+for (int i = 0; i < s.length(); i++){
+    result += countSegment(s, i, i);
+    result += countSegment(s, i, i + 1);
+}
+return result;
+
+private int countSegment(String s, int start, int end){
+    int cnt = 0;
+    while (start >= 0 && end < s.length() && s.charAt(start) == s.charAt(end)){
+        cnt++;
+        start--;
+        end++;
+    }
+    return cnt;
+}
+```
