--- a/601-700.md
+++ b/601-700.md
@@ -295,3 +295,49 @@ private int countSegment(String s, int start, int end){
     return cnt;
 }
 ```
+# 648. Replace Words
+排序后二分搜索，库函数`Collections.binarySearch`将返回搜索的位置，如果返回负数则对应正数应该的位置，用此位置检查前一个位置是否可行
+>对于`[b,d]`，查询`a`返回`-1`，查询`c`返回`-2`，查询`e`返回`-3`
+
+一般的思路是构造前缀树
+``` java
+class TrieNode {
+    boolean isLeaf;
+    TrieNode[] children = new TrieNode[26];
+}
+
+private void add(List<String> dict) {
+    for(String d : dict){
+        TrieNode node = root;
+        for (char c : d.toCharArray()) {
+            if (node.children[c - 'a'] == null) {
+                node.children[c - 'a'] = new TrieNode();
+            }
+            node = node.children[c - 'a'];
+        }
+        node.isLeaf = true;
+    }
+}
+```
+# 649. Dota2 Senate
+模拟整个投票过程
+# 650. 2 Keys Keyboard
+记忆化递归，考虑复制粘贴合二为一与粘贴两种情况，因为不能一直复制，所以复制必然带一个粘贴，将其当成一个操作
+
+另外比较数学的方式是，注意
+> 只能复制全部的数，不能回退，找到所有因子，然后复制`n/i-1`次
+``` java
+for (int i = n - 1; i > 1; --i) {
+    if (n % i == 0) {
+        res = min(res, minSteps(n / i) + i);
+    }
+}
+```
+可以证明最大的因子是最优的情况
+``` java
+for (int i = n / 2; i > 1; i--) {
+   if (n % i == 0) {
+       return minSteps(i) + n / i;
+   }
+}
+```
