--- a/601-700.md
+++ b/601-700.md
@@ -343,3 +343,9 @@ for (int i = n / 2; i > 1; i--) {
 ```
 # 652. Find Duplicate Subtrees
 序列化节点，记录每个节点的字串个数，当某一次为`1`的时候加入结果
+# 653. Two Sum IV - Input is a BST
+把遍历遇到的数加入`set`中，后续检查`k-root.var`是否在`set`中
+# 654. Maximum Binary Tree
+找到最大的元素位置，递归两边的数组
+# 655. Print Binary Tree
+求高度，求长度，将每个元素递归的往中间放
