--- a/601-700.md
+++ b/601-700.md
@@ -349,3 +349,30 @@ for (int i = n / 2; i > 1; i--) {
 找到最大的元素位置，递归两边的数组
 # 655. Print Binary Tree
 求高度，求长度，将每个元素递归的往中间放
+# 657. Robot Return to Origin
+计数即可
+# 658. Find K Closest Elements
+二分找插入的位置，向前和后移动得到`l`和`r`的位置，都取开区间
+> 位置不好控制
+
+考虑自定义排序
+``` java
+Collections.sort(arr, (a,b) -> a == b ? a - b : Math.abs(a-x) - Math.abs(b-x));
+arr = arr.subList(0, k);
+Collections.sort(arr);
+```
+另外二分直接找最左的节点
+``` java
+int start = 0;
+int end = arr.length-k;
+while(start < end) {
+    int mid = (start+end)/2;
+    if(Math.abs(arr[mid]-x) > Math.abs(arr[mid+k]-x)) {
+        start = mid+1;
+    }else {
+        end = mid;
+    }
+}
+```
+# 659. Split Array into Consecutive Subsequences
+遇到一个元素，看是否能加入前面的序列，否则开一个三个元素的序列，并将后一个需要值加`1`
