--- a/601-700.md
+++ b/601-700.md
@@ -376,3 +376,5 @@ while(start < end) {
 ```
 # 659. Split Array into Consecutive Subsequences
 遇到一个元素，看是否能加入前面的序列，否则开一个三个元素的序列，并将后一个需要值加`1`
+# 661. Image Smoother
+对每个元素遍历周围的点，向下取整数直接`int`除就行了
