--- a/601-700.md
+++ b/601-700.md
@@ -378,3 +378,24 @@ while(start < end) {
 遇到一个元素，看是否能加入前面的序列，否则开一个三个元素的序列，并将后一个需要值加`1`
 # 661. Image Smoother
 对每个元素遍历周围的点，向下取整数直接`int`除就行了
+# 662. Maximum Width of Binary Tree
+计数，左节点标记为`i*2`，右节点标记为`i*2+1`，层次遍历的时候记录放入的下标
+
+计数也可以用dfs的方式，每次记录第一次到达层数的下标，即最左节点，之后每次到达这个层数，计算距离
+``` java
+private int maxW = 0;
+HashMap<Integer, Integer> map = new HashMap<>();
+
+dfs(root, 1, 1);
+
+private void dfs(TreeNode r, int level, int index) {
+    if (r == null) return;
+    if (!map.containsKey(level))
+        map.put(level,index);
+    maxW = Math.max(maxW, index-map.get(level)+1);
+    dfs(r.left,level+1,index*2);
+    dfs(r.right,level+1,index*2+1);
+}
+```
+
+也可以模拟，只是每次需要把`NULL`放入进去，
