--- a/601-700.md
+++ b/601-700.md
@@ -397,5 +397,11 @@ private void dfs(TreeNode r, int level, int index) {
     dfs(r.right,level+1,index*2+1);
 }
 ```
-
 也可以模拟，只是每次需要把`NULL`放入进去，
+# 664. Strange Printer
+考虑第一个字符的情况，要么打一个，要么打到某个跟第一个相同的位置
+> 从第一个字符开始打不影响最后的结果
+``` java
+dp[i][j]=dp[i+1][j]+1
+dp[i][j]=dp[i][k-1]+dp[k+1][j] // a[i]=a[k] k可以直接跟第一个字符一起打了，不占次数
+```
