--- a/601-700.md
+++ b/601-700.md
@@ -405,3 +405,15 @@ private void dfs(TreeNode r, int level, int index) {
 dp[i][j]=dp[i+1][j]+1
 dp[i][j]=dp[i][k-1]+dp[k+1][j] // a[i]=a[k] k可以直接跟第一个字符一起打了，不占次数
 ```
+# 665. Non-decreasing Array
+遇到一个降序的时候肯定就需要移除一下，当`num[i]`比前面第二个还要小时，则必须移掉当前的，否则移掉前一个，小的即可满足，保留小的
+> 2 `3` 3 `2` 5 移掉`2`
+ 
+> 2 `3` 7 `4` 5 移掉`7`
+# 667. Beautiful Arrangement II
+翻转后面的部分即可得到一个不同的值
+1. 1 2 3 4 5
+2. 1 5 4 3 2
+3. 1 5 2 3 4
+4. 1 5 2 4 3
+因此按顺序分别插入
