--- a/601-700.md
+++ b/601-700.md
@@ -448,3 +448,10 @@ else{
 ```
 # 673. Number of Longest Increasing Subsequence
 `dp`并记录此节点结尾的个数，记录最大值，最后遍历一遍看等于最大值的位置的个数
+# 674. Longest Continuous Increasing Subsequence
+记录当前结尾的连续最长值
+# 675. Cut Off Trees for Golf Event
+排序找每个点距离
+>放入队列后即为`visit`，而不是弹出的时候
+# 676. Implement Magic Dictionary
+按长度去放，遍历长度里面的内容比较
