--- a/601-700.md
+++ b/601-700.md
@@ -455,3 +455,119 @@ else{
 >放入队列后即为`visit`，而不是弹出的时候
 # 676. Implement Magic Dictionary
 按长度去放，遍历长度里面的内容比较
+# 677. Map Sum Pairs
+前缀树，每个值默认为，结尾赋值，遍历的时候求所有子节点的和
+
+也可以暴力遍历每个值，满足前缀关系即相加
+# 678. Valid Parenthesis String
+递归，用`count`来记录，记忆化递归
+>一般来说记忆化递归有返回值，同时参数个数与递归内的变量一样多
+
+另外考虑两个栈存左括号和`*`的位置，每次出现右括号的时候先用左括号去匹配，最后考虑`left`的下标是否小于`*`
+``` java
+for (int i = 0; i < s.length(); i++) {
+    String temp = s.substring(i, i + 1);
+    if (temp.equals("(")) {
+        left.push(i);
+    } else if (temp.equals("*")) {
+        star.push(i);
+    } else if (")".equals(temp)) {
+        if (!left.empty()) {
+            left.pop();
+            continue;
+        }
+        if (!star.empty()) {
+            star.pop();
+            continue;
+        }
+        return false;
+    }
+}
+while (!left.empty()) {
+    if (star.empty()) {
+        return false;
+    }
+    if (left.peek() < star.peek()) {
+        left.pop();
+        star.pop();
+    } else {
+        return false;
+    }
+}
+return true;
+```
+考虑所有的情况，用`set`存左减右的差值，最后看是否存在`0`
+* 左括号，所有元素`+1`
+* 右括号，所有元素`-1`，保留非负
+* `*`，所有元素`+1`和`-1`，保留非负
+
+可以两次遍历，分别把`*`当成左右括号的匹配情况
+``` java
+for (int i = 0; i < n; ++i) {
+    if (s[i] == '(' || s[i] == '*') ++left;
+    else --left;
+    if (left < 0) return false;
+}
+if (left == 0) return true;
+for (int i = n - 1; i >= 0; --i) {
+    if (s[i] == ')' || s[i] == '*') ++right;
+    else --right;
+    if (right < 0) return false;
+}
+return true;
+```
+一次遍历，`low`表示未匹配的左括号的最小值，`high`表示最大值
+``` java
+for (int i = 0; i < s.length(); i++) {
+    if (s.charAt(i) == '(') {
+        low++;
+        high++;
+    } else if (s.charAt(i) == ')') {
+        if (low > 0) {
+            low--;
+        }
+        high--;
+    } else {
+        if (low > 0) {
+            low--;
+        }
+        high++;
+    }
+    if (high < 0) {
+        return false;
+    }
+}
+return low == 0;
+```
+# 679. 24 Game
+每次拿出两个数组成一个新数放进去
+>`double`除数可以为`0`，值为`Infinity`，`0`除以`0`为`NaN`
+``` java
+public boolean judgePoint24(double[] nums) {
+    if (nums.length == 1) {
+        return Math.abs(nums[0] - 24) / 24 < 1e-5;
+    } else {
+        for (int i = 0; i < nums.length - 1; i++) {
+            for (int j = i + 1; j < nums.length; j++) {
+                for (double newExp : combine(nums[i], nums[j])) {
+                    double[] newList = new double[nums.length - 1];
+                    for (int p = 0, k = 0; k < nums.length; k++) {
+                        if (k != i && k != j) {
+                            newList[p++] = nums[k];
+                        }
+                    }
+                    newList[newList.length - 1] = newExp;
+                    if (judgePoint24(newList))
+                        return true;
+                }
+            }
+        }
+    }
+    
+    return false;
+}
+
+private double[] combine(double a, double b) {
+    return new double[] {a+b, a-b, b-a, a*b, a/b, b/a};
+}
+```
