--- a/601-700.md
+++ b/601-700.md
@@ -571,3 +571,47 @@ private double[] combine(double a, double b) {
     return new double[] {a+b, a-b, b-a, a*b, a/b, b/a};
 }
 ```
+# 680. Valid Palindrome II
+递归考虑两边相等情况和不相等的情况
+# 682. Baseball Game
+用栈保存每个回合有效值，最后可以遍历栈来取得最终值
+# 684. Redundant Connection
+通过出度入度求出环上的点，从后往前判断在环上的点
+
+通过并查集，当出现的点的祖先相同时说明存在环了，需要删除
+``` java
+UnionFind uf = new UnionFind(n);
+for (int i = 0; i < n; i++) {
+    if (uf.union(edges[i][0] - 1, edges[i][1] - 1)) {
+        result[0] = edges[i][0];
+        result[1] = edges[i][1];
+        break;
+    }
+}
+public class UnionFind {
+    private int[] id;
+    public UnionFind(int n) {
+        id = new int[n];
+        for(int i = 0; i < n; i++) {
+            id[i] = i;
+        }
+    }
+
+    public int find(int p) {
+        while (p != id[p]) {
+            p = id[p];
+        }
+        return p;
+    }
+
+    public boolean union(int p, int q) {
+        int i = find(p);
+        int j = find(q);
+        if (i == j) {
+            return true;
+        }
+        id[i] = j;
+        return false;
+    }
+}
+```
