--- a/601-700.md
+++ b/601-700.md
@@ -615,3 +615,44 @@ public class UnionFind {
     }
 }
 ```
+# 685. Redundant Connection II
+并查集可以很好地找到环的位置，考虑是否存在入度为`2`的情况（两个父亲），入度为`2`的一条边肯定要删掉
+1. 不存在，则删除刚好形成环的边，同[684](#684-redundant-connection)
+2. 存在，考虑删除在环上的边，如果都在则删除后面出现的边
+# 686. Repeated String Match
+从头开始比较，看需要多少个才能匹配到`b`的末尾，从每个位置开始都不行则返回`-1`
+
+考虑a的长度大于b，则最长到`2*a`，如果`a`小于`b`，最长到`2*a+b`
+``` java
+sbd.append(a);
+int i = 1 ;
+while( sbd.length() < b.length() ){
+    i++ ;
+    sbd.append(a);
+}
+if( sbd.lastIndexOf(b) > -1 ){
+    return i ;
+}
+if( sbd.append(a).lastIndexOf(b) > -1 ){
+    return i+1 ;
+}
+return -1 ;
+```
+# 687. Longest Univalue Path
+递归中返回包含根节点的边的长度，途中记录最大值
+``` java
+public int arrowLength(TreeNode node) {
+    if (node == null) return 0;
+    int left = arrowLength(node.left);
+    int right = arrowLength(node.right);
+    int arrowLeft = 0, arrowRight = 0;
+    if (node.left != null && node.left.val == node.val) {
+        arrowLeft += left + 1;
+    }
+    if (node.right != null && node.right.val == node.val) {
+        arrowRight += right + 1;
+    }
+    ans = Math.max(ans, arrowLeft + arrowRight);
+    return Math.max(arrowLeft, arrowRight);
+}
+```  
