--- a/601-700.md
+++ b/601-700.md
@@ -656,3 +656,13 @@ public int arrowLength(TreeNode node) {
     return Math.max(arrowLeft, arrowRight);
 }
 ```  
+# 688. Knight Probability in Chessboard
+记忆化递归，在棋盘的总次数除以`8`的`k`次幂
+# 689. Maximum Sum of 3 Non-Overlapping Subarrays
+`dp[i][j]`，表示到`j`的`i`个不重叠子数组最大值
+``` java
+dp[i][j] = Math.max(dp[i][j-1], dp[i - 1][j - k] + sum[j] - sum[j - k])
+```
+用`prev`记录去到最大值时的坐标
+# 690. Employee Importance
+循环比较`id`可以优化为用`map`
