--- a/601-700.md
+++ b/601-700.md
@@ -666,3 +666,94 @@ dp[i][j] = Math.max(dp[i][j-1], dp[i - 1][j - k] + sum[j] - sum[j - k])
 用`prev`记录去到最大值时的坐标
 # 690. Employee Importance
 循环比较`id`可以优化为用`map`
+# 691. Stickers to Spell Word
+搜索，用了比较多的剪枝
+* 超过`result`长度可以返回
+* 超过`target`长度可以返回
+* 单词不包含`target`的元素可以不要
+* 单词能提供的元素别的单词能提供更多可以不要
+
+考虑记忆化递归，记录变化后的单词
+``` java
+private int dfs(int[][] dirs, String tar){
+    if(mp.containsKey(tar)) return mp.get(tar);
+    int[] freq=new int[26];
+    for(int i=0; i<tar.length(); i++)
+        ++freq[tar.charAt(i)-'a'];
+
+    int ans=Integer.MAX_VALUE;
+
+    for(int i=0; i<dirs.length; i++){
+        if(dirs[i][tar.charAt(0)-'a']==0) continue;
+        StringBuilder sb=new StringBuilder();
+        for(int j=0; j<26; j++){
+            int cnt=freq[j]-dirs[i][j];
+            for(int k=0; k<cnt; k++)
+                sb.append((char)(j+'a'));
+        }
+        int ans2=dfs(dirs, sb.toString());
+        if(ans2!=-1) ans=Math.min(ans, 1+ans2);
+    }
+    mp.put(tar, ans==Integer.MAX_VALUE ? -1 : ans);
+    return mp.get(tar);
+```
+
+考虑状态压缩，对长度编码，如`abc`最终状态看成`111`，从`000`开始，对每个单词找转移到的`j`，`dp[j]=Math.min(dp[j],dp[i]+1)`
+``` java
+int n = target.length();
+int m = 1 << n;
+int[] dp = new int[m];
+for (int i = 0; i < m; i++) {
+    dp[i] = Integer.MAX_VALUE;
+}
+dp[0] = 0;
+
+for (int i = 0; i < m; i++) {
+    if (dp[i] == Integer.MAX_VALUE) {
+        continue;
+    }
+    for (String str : stickers) {
+        int parent = i;
+        for (char c : str.toCharArray()) {
+            for (int j = 0; j < n; j++) {
+                if (c == target.charAt(j) && ((parent >> j) & 1) == 0) {
+                    parent = parent | (1 << j);
+                    break;
+                }
+            }
+        }
+        dp[parent] = Math.min(dp[parent], dp[i] + 1);
+    }
+}
+return dp[m - 1] == Integer.MAX_VALUE ? -1 : dp[m - 1];
+```
+# 692. Top K Frequent Words
+统计次数，然后用最小堆来记录，当大于等于堆顶时，可以先放再弹出
+
+或者直接维护最小堆，先放当容量大于`k`后直接弹出
+``` java
+Map<String, Integer> count = new HashMap();
+for (String word: words) {
+    count.put(word, count.getOrDefault(word, 0) + 1);
+}
+PriorityQueue<String> heap = new PriorityQueue<String>(
+        (w1, w2) -> count.get(w1).equals(count.get(w2)) ?
+        w2.compareTo(w1) : count.get(w1) - count.get(w2) );
+
+for (String word: count.keySet()) {
+    heap.offer(word);
+    if (heap.size() > k) heap.poll();
+}
+
+List<String> ans = new ArrayList();
+while (!heap.isEmpty()) ans.add(0, heap.poll());
+return ans;
+```
+# 693. Binary Number with Alternating Bits
+转成字符串看是否由`1`，`0`组成
+
+考虑异或后是否变为全`1`
+``` java
+int temp=n^(n>>1);
+return (temp&(temp+1))==0;
+```
