--- a/601-700.md
+++ b/601-700.md
@@ -757,3 +757,21 @@ return ans;
 int temp=n^(n>>1);
 return (temp&(temp+1))==0;
 ```
+# 695. Max Area of Island
+对每个`1`进行遍历，遍历后标记为`0`，记录最大值
+# 696. Count Binary Substrings
+计算每个0或1同时出现的次数，没两对取最小值，统计可以在遍历过程中进行
+``` java
+for(int i=1; i<chars.length; i++){
+    if(chars[i-1]==chars[i]) count++;
+    else{
+        res+=Math.min(pre, count);
+        pre=count;
+        count=1;
+    }
+}
+res+=Math.min(pre, count);
+```
+# 697. Degree of an Array
+记录最大的出现次数，记录每个值的左右下标，对最大的元素求一个分割最近距离
+> `Collections.max()`可以求最大值
