--- a/601-700.md
+++ b/601-700.md
@@ -775,3 +775,43 @@ res+=Math.min(pre, count);
 # 697. Degree of an Array
 记录最大的出现次数，记录每个值的左右下标，对最大的元素求一个分割最近距离
 > `Collections.max()`可以求最大值
+# 698. Partition to K Equal Sum Subsets
+求出`target`，然后每次贪心的从中拿出一个集合，
+>但贪心并非正确，如`[10,10,10,7,7,7,7,7,7,6,6,6]`，拿出第一个`30`，后面不行了，但实际是可以的。所以正反序后判断两边
+
+考虑`k`个桶，将每个元素放进去
+``` java
+boolean help(int[] nums, int cur, int[] bucket, int k){
+    if(cur < 0){
+        return true;
+    }
+    for(int i = 0; i < k; i++){
+        if(bucket[i] == nums[cur] || bucket[i] - nums[cur] >= nums[0]){
+            bucket[i] -= nums[cur];
+            if(help(nums, cur - 1, bucket, k)){
+                return true;
+            }
+            bucket[i] += nums[cur];
+        }
+    }
+    return false;
+}
+```
+``` java
+boolean cal(int[] nums, int k, int start, int curSum, boolean[] mark, int subSum) {
+    if (k == 1) return true;
+    if (curSum == subSum) return cal(nums, k - 1, 0, 0, mark, subSum);
+    for (int i = start; i < nums.length; i++) {
+        if (mark[i]) continue;
+        mark[i] = true;
+        if (cal(nums, k, i + 1, curSum + nums[i], mark, subSum)) return true;
+        mark[i] = false;
+    }
+    return false;
+}
+```
+逆序先放大的比较好
+# 699. Falling Squares
+记录之前位置的最高值，遍历之前的位置，如果可以在区间内则记录最大的高度，更新最高高度加入结果
+# 700. Search in a Binary Search Tree
+判断与根节点的大小，递归搜索
