--- a/601-700.md
+++ b/601-700.md
@@ -812,6 +812,6 @@ boolean cal(int[] nums, int k, int start, int curSum, boolean[] mark, int subSum
 ```
 逆序先放大的比较好
 # 699. Falling Squares
-记录之前位置的最高值，遍历之前的位置，如果可以在区间内则记录最大的高度，更新最高高度加入结果
+记录之前位置的最高值，遍历之前的位置，如果当前元素在区间内则记录最大的高度，更新最高高度加入结果
 # 700. Search in a Binary Search Tree
 判断与根节点的大小，递归搜索
