--- a/701-800.md
+++ b/701-800.md
@@ -30,3 +30,32 @@ TreeNode insertIntoBST(TreeNode root, int val) {
 # 710. Random Pick with Blacklist
 随机出`n-len`的值，如果在黑名单，则对应到`n-len`之后，构造函数构造这个对应关系
 >运用迭代器每次取出一个元素
+# 712. Minimum ASCII Delete Sum for Two Strings
+记忆化递归，也可以`dp`
+``` java
+for (int i = 1; i <= s1.length(); i++) {
+    dp[i][0] = dp[i - 1][0] + s1.charAt(i - 1);
+}
+for (int j = 1; j <= s2.length(); j++) {
+    dp[0][j] = dp[0][j - 1] + s2.charAt(j - 1);
+}
+for (int i = 1; i <= s1.length(); i++) {
+    for (int j = 1; j <= s2.length(); j++) {
+        if (s1.charAt(i - 1) == s2.charAt(j - 1)) dp[i][j] = dp[i - 1][j - 1];
+        else dp[i][j] = Math.min(dp[i - 1][j] + s1.charAt(i - 1), dp[i][j - 1] + s2.charAt(j - 1));
+    }
+}
+return dp[s1.length()][s2.length()];
+```
+# 713. Subarray Product Less Than K
+考虑以某位置结尾的最左位置，记录全部的积
+> 双指针
+``` java
+if (k <= 1) return 0;
+int prod = 1, ans = 0, left = 0;
+for (int right = 0; right < nums.length; right++) {
+    prod *= nums[right];
+    while (prod >= k) prod /= nums[left++];
+    ans += right - left + 1;
+}
+```
