--- a/701-800.md
+++ b/701-800.md
@@ -59,3 +59,12 @@ for (int right = 0; right < nums.length; right++) {
     ans += right - left + 1;
 }
 ```
+# 714. Best Time to Buy and Sell Stock with Transaction Fee
+考虑两个状态的转移即可，在卖出去的时候减去手续费
+# 715. Range Module
+使用`treemap`
+>`map[left]=right`
+# 717. 1-bit and 2-bit Characters
+如果是`1`则往后走两个，否则走一个，看能走到的位置
+# 718. Maximum Length of Repeated Subarray
+连续的数组，所以`dp`要考虑从对角线转移过来，途中记录最大值
